add potree demostration

--- a/src/routes/home/home.less
+++ b/src/routes/home/home.less
@@ -6,10 +6,9 @@
   height: 100%;
 }
 
-.csm-viewer-tools{
+.csm-viewer-tools {
   z-index: 9999;
   position: absolute;
-  left: 0;
-  top: 0;
-
+  left: 15px;
+  top: 15px;
 }
